# Openenv_project-

./: Dockerfile  README.md  TODO.md  app.py  baseline.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: tickets.json
graders/: __init__.py  common.py  easy_grader.py  hard_grader.py  medium_grader.py
openenv_support_env/: Dockerfile  README.md  __init__.py  env.py  models.py  openenv.yaml  requirements.txt
openenv_support_env/graders/: common.py  easy_grader.py  hard_grader.py  medium_grader.py
openenv_support_env/tasks/: __init__.py  easy.py  hard.py  medium.py
scripts/: validate-submission.sh
server/: app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
