[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-hackathon"
version = "0.1.0"
description = "Customer support environment for OpenEnv hackathon"
dependencies = [
  "pydantic>=2.6,<3.0",
  "openai>=1.30.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openenvhackathon"]

